resources/assets/css/style.css
/* ... */
[data-bs-theme=dark] .select2-container--bootstrap .select2-dropdown {
    border-color: var(--tblr-border-color) !important;
}

div.controls {
    top: -5px;
}

.repeatable-group {
    padding-bottom: 12px;
}
.add-repeatable-element-button {
    margin-top: 5px;
}

form .form-group.required > label:not(:empty):not(.form-check-label)::after {
    color: var(--tblr-danger) !important;
}

label {
    padding-bottom: 5px;
    padding-top: 5px;
}

/*Hide separators in horizontal layouts*/
header .nav-separator {
    display: none;
}

.header-operation h3 {
    font-size: 25px;
    line-height: 27px !important;
}


ol li.ui-sortable-placeholder.placeholder {
    width: 100%;
    height: 35px;
}

div.row div.form-group {
    padding-bottom: 10px;
}

tr.array-row td:has(span.ui-sortable-handle) {
    vertical-align: middle !important;
}

[data-bs-theme=dark] tr.array-row td span.ui-sortable-handle,
[data-bs-theme=dark] tr.array-row td button.removeItem {
    background-color: var(--tblr-gray-600);
    color: var(--tblr-light);
}

/* fix doubleTopBarInHorizontalLayouts */

.nav-brand {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: var(--tblr-navbar-brand-font-size);
}

/* Page headers */
[bp-section=page-heading] {
    line-height: normal;
}

/* Horizontal Overlap Layout */
.navbar-overlap:after {
    height: 13rem;
}

@media (min-width: 992px) {
    body[bp-layout=horizontal-overlap] .header-operation,
    body[bp-layout=horizontal-overlap] [bp-section=page-heading] {
        color: var(--tblr-gray-200);
    }
}

body[bp-layout=horizontal-overlap] .breadcrumb .active {
    color: var(--tblr-gray-200);
}

body[bp-layout=horizontal-overlap] .navbar-filters .navbar-nav .nav-link {
    color: var(--tblr-gray-200);
}

body[bp-layout=horizontal-overlap] .nav-item > a {
    color: var(--tblr-gray-400);
}

[data-bs-theme=dark] body[bp-layout=horizontal-overlap] .nav-item > a {
    color: var(--tblr-gray-500);
}

[data-bs-theme=dark] body[bp-layout=horizontal-overlap] .nav-item > a.active {
    color: var(--tblr-gray-100);
}

/* avatar fallback */
.backpack-avatar-menu-container {
    position: absolute;
    left: 0;
    width: 100%;
    background-color: var(--tblr-primary);
    border-radius: 50%;
    color: #FFF;
    line-height: 35px;
    font-size: 85%;
    font-weight: 300;
}


/* Remove once https://github.com/tabler/tabler/pull/1647 is merged */
.form-control:focus,
.form-select:focus {
    border-color: rgba(var(--tblr-primary-rgb), 0.5);
    box-shadow: 0 0 transparent, 0 0 0 0.25rem rgba(var(--tblr-primary-rgb),.25);
}


/* devtools adjustments */

[data-bs-theme="light"] [bp-section=devtools-preview-files] .nav.nav-pills {
    background: white;
    border-radius: 4px;
}

[data-bs-theme="light"] [bp-section=devtools-preview-files] .tab-content {
    background: white;
    border-radius: 4px;
}

/* Alerts */

[data-bs-theme=dark] .alert-danger {
    background-color: var(--tblr-bg-surface);
}

/* Swal */

[data-bs-theme=dark] .swal-modal {
    background-color: var(--tblr-bg-surface);
}

[data-bs-theme=dark] .swal-title,
[data-bs-theme=dark] .swal-text {
    color: var(--tblr-dark-text);
}

/* CKEditor */

[data-bs-theme=dark] .ck.ck-editor__main>.ck-editor__editable,
[data-bs-theme=dark] .ck.ck-toolbar {
    background: var(--tblr-bg-surface) !important;
    border-color: var(--tblr-primary-border-subtle) !important;
}

[data-bs-theme=dark] .ck.ck-toolbar .ck.ck-toolbar__separator {
    background: var(--tblr-primary-border-subtle) !important;
}

[data-bs-theme=dark] .ck.ck-button {
    color: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .ck.ck-button:hover {
    background: var(--tblr-tabler) !important;
}

[data-bs-theme=dark] .ck.ck-button.ck-on {
    background: var(--tblr-tabler) !important;
}

/* EasyMDE */

[data-bs-theme=dark] .EasyMDEContainer,
[data-bs-theme=dark] .EasyMDEContainer .editor-toolbar,
[data-bs-theme=dark] .EasyMDEContainer .CodeMirror {
    background: var(--tblr-bg-surface) !important;
    border-color: var(--tblr-primary-border-subtle) !important;
}

[data-bs-theme=dark] .EasyMDEContainer .editor-toolbar,
[data-bs-theme=dark] .EasyMDEContainer button {
    color: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .EasyMDEContainer .CodeMirror-code {
    color: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .EasyMDEContainer .CodeMirror-cursor {
    border-left: 1px solid var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .EasyMDEContainer .editor-toolbar button:hover {
    background: var(--tblr-tabler) !important;
}

[data-bs-theme=dark] .EasyMDEContainer .editor-toolbar button.active {
    background: var(--tblr-tabler) !important;
}

/* Select2 badge */

[data-bs-theme=dark] .select2-selection__choice {
    background: var(--tblr-tabler) !important;
    color: var(--tblr-bg-surface) !important;
    border-color: var(--tblr-tabler) !important;
}

[data-bs-theme=dark] .select2-selection__choice .select2-selection__choice__remove {
    color: var(--tblr-bg-surface) !important;
}

[data-bs-theme=dark] .select2-dropdown {
    background-color: var(--tblr-bg-surface) !important;
}

/* Phone field */

[data-bs-theme=dark] .iti .iti__flag-container,
[data-bs-theme=dark] .iti .iti__selected-flag {
    background-color: var(--tblr-bg-surface-secondary) !important;
}

[data-bs-theme=dark] .iti .iti__selected-dial-code {
    color: var(--tblr-muted) !important;
}

[data-bs-theme=dark] .iti .iti__country-list {
    background-color: var(--tblr-dark) !important;
}

[data-bs-theme=dark] .iti .iti__country-name {
    color: var(--tblr-body-color) !important;
}

[data-bs-theme=dark] .iti .iti__active,
[data-bs-theme=dark] .iti .iti__highlight {
    background-color: var(--tblr-primary) !important;
    color: #fff;
}

/* Icon Picker */

[data-bs-theme=dark] .iconpicker {
    background-color: transparent;
    border-color: var(--tblr-primary);
    color: var(--tblr-primary);
}
/* ... */

